manifests/bases/node-app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  selector:
    matchLabels:
      app: node-app
  replicas: 1
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: containerrepoakstest.azurecr.io/node-app:SET_TAG_IN_OVERLAY
          command: ["node"]
          args: ["websocket-server.js"]
          ports:
            - containerPort: 8080
              name: ws
              protocol: TCP
          resources:
            limits:
              memory: 200Mi
              cpu: "200m"
            requests:
              memory: 200Mi
              cpu: "200m"
