manifests/bases/node-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: node-app
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: ws
  selector:
    app: node-app
