manifests/bases/node-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app
spec:
  ingressClassName: nginx
  rules:
    - host: poc.opsy.site
      http:
        paths:
          - backend:
              service:
                name: node-app
                port:
                  number: 8080
            path: /api/v1/ws
            pathType: Prefix
